kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: flask

spec:
  replicas: 2
    
  selector: 
    matchLabels:
      app: flask

  template: 
    metadata:
      labels:
        app: flask
  
    spec:
      containers:
        - name: flask
          image: 356892573173.dkr.ecr.ap-northeast-2.amazonaws.com/ekseks-project-app:v2
        
          ports: 
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
