kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: flask-service
  labels:
    app: flask

spec:
  type: ClusterIP
  selector:
    app: flask
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
